force-app/main/default/objects/FSM_CapacityPlan__mdt/FSM_CapacityPlan__mdt.object-meta.xml
<CustomObject>
    <label>Capacity Plan</label>
    <pluralLabel>Capacity Plans</pluralLabel>
</CustomObject>