force-app/main/default/objects/FSM_CapacityPlan__mdt/fields/FSM_IsP1__c.field-meta.xml
<CustomField>
    <fullName>FSM_IsP1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is P1</label>
    <type>Checkbox</type>
</CustomField>