force-app/main/default/objects/FSM_CapacityPlan__mdt/fields/FSM_IsP3__c.field-meta.xml
<CustomField>
    <fullName>FSM_IsP3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is P3</label>
    <type>Checkbox</type>
</CustomField>