force-app/main/default/objects/FSM_CapacityPlan__mdt/fields/FSM_WorkCategory__c.field-meta.xml
<CustomField>
    <fullName>FSM_WorkCategory__c</fullName>
    <label>Work category</label>
    <length>80</length>
    <type>Text</type>
</CustomField>