force-app/main/default/objects/FSM_CapacityPlan__mdt/fields/FSM_WorkCentre__c.field-meta.xml
<CustomField>
    <fullName>FSM_WorkCentre__c</fullName>
    <label>Work Centre</label>
    <length>255</length>
    <type>Text</type>
</CustomField>