force-app/main/default/objects/FSM_CapacityPlan__mdt/fields/FSM_ZPM1__c.field-meta.xml
<CustomField>
    <fullName>FSM_ZPM1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ZPM1</label>
    <type>Checkbox</type>
</CustomField>