force-app/main/default/objects/FSM_CapacityPlan__mdt/fields/FSM_ZPM2__c.field-meta.xml
<CustomField>
    <fullName>FSM_ZPM2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ZPM2</label>
    <type>Checkbox</type>
</CustomField>