force-app/main/default/objects/FSM_CapacityPlan__mdt/fields/FSM_ZPM3__c.field-meta.xml
<CustomField>
    <fullName>FSM_ZPM3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ZPM3</label>
    <type>Checkbox</type>
</CustomField>